# Oz_CodingSchool-Assignment

./: README.md
Database Assignment Day1/: chapter01_06 clear.ipynb
Database Assignment Day2/: chapter07_13 clear.ipynb
Database Assignment Day3/: employees.sql
Database Assignment Day4/: Delete.sql  create.sql  read.sql  write.sql
Database Assignment Day5/: sakila.py  (+1 more)
Django Assignment Day12/: db.sqlite3  pyproject.toml
Django Assignment Day12/config/: models.py  settings.py  urls.py
Django Assignment Day12/restaurants/: serializers.py  test.py  tests.py  urls.py  views.py
Django Assignment Day12/restaurants/migrations/: 0001_initial.py
Django Assignment Day12/reviews/: tests.py
Django Assignment Day12/users/: models.py  tests.py
Django Assignment Day12/users/migrations/: 0001_initial.py
Django Assignment Day8/: db.sqlite3  pyproject.toml
Django Assignment Day8/config/: settings.py  urls.py
Django Assignment Day8/templates/registration/: signup_done.html  verify_failed.html  verify_success.html
Django Assignment Day8/templates/todo/: base.html  todo_create.html  todo_info.html  todo_update.html
Django Assignment Day8/todo/: admin.py  cb_views.py  forms.py  models.py  views.py
Django Assignment Day8/todo/migrations/: 0002_todo_user.py  0003_comment.py  0004_alter_comment_message.py  0005_todo_completed_image.py  0006_todo_thumbnail.py  0007_alter_todo_completed_image_alter_todo_description_and_more.py
Django Assignment Day8/users/: forms.py  models.py
Django Assignment Day8/users/migrations/: 0001_initial.py  0002_alter_user_options.py
(+190 files in other folders)
